# C-practice

CPP_project/: CMakeLists.txt  day01-bool.cpp  day01-cin.cpp  day01-constant.cpp  day01-hello.cpp  day01-variable.cpp  puke-practice.cpp
Cpp-practice/: CMakeLists.txt  algorithm.cpp
Nesting_practice/: Nesting_practice.sln
Nesting_practice/Nesting_practice/: Nesting_practice.vcxproj  Nesting_practice.vcxproj.filters  demo1.c  demo2.c  demo3.c  demo4.c
Project1/switch-case1/: switch-case1.sln
Structure-Practice/: Structure-Practice.sln
Structure-Practice/Structure-Practice/: Structure-Practice.vcxproj  demo1.c
algorithm_practice/algorithm_pratctice/: algorithm_pratctice.vcxproj  demo1.c  demo2.c  demo3.c  demo4.c
algorithm_pratctice/: algorithm_pratctice.sln
algorithm_pratctice/algorithm_pratctice/: algorithm_pratctice.vcxproj  demo1.c
array_practice/: array_practice.sln
array_practice/array_practice/: array_practice.vcxproj  array_practice.vcxproj.filters  demo1.c  demo2.c  demo3.c  demo4.c  demo5.c  demo6.c  demo7.c
break_exe/: break_exe.sln
break_exe/break_exe/: break_exe.vcxproj  break_exe.vcxproj.filters  demo1.c  demo2.c
class_project/: class_project.sln
class_project/class_project/: class_project.vcxproj  class_project.vcxproj.filters  demo1.c  demo2.c  demo3.c  demo4.c  demo5.c  demo6.c
execrise/: execrise.sln
math_practice/: math_practice.sln
pointer_practice/: pointer_practice.sln
simple_game_demo/: simple_game_demo.sln
string_practice/: string_practice.sln
test_game/: test_game.sln
while_exe_demo1/: while_exe_demo1.sln
(+271 files in other folders)
